--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ buildscript {
 
     dependencies {
         classpath 'io.fabric.tools:gradle:1.+'
+
     }
 }
 apply plugin: 'com.android.application'
@@ -12,6 +13,9 @@ apply plugin: 'io.fabric'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+    maven {
+        url 'http://repo.spring.io/milestone'
+    }
 }
 
 
